<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/listaActivityID"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.erikzambeligmail.rachandoaconta.utils.PrincipalActivity">

    <ListView
        android:id="@+id/listaItens"
        android:layout_width="373dp"
        android:layout_height="342dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="2dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="-11dp" />

    <TextView
        android:id="@+id/textViewValorTotal"
        android:layout_width="370dp"
        android:layout_height="58dp"
        android:layout_marginBottom="51dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/textoValorTotal"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textViewValorDividido"
        android:layout_width="370dp"
        android:layout_height="58dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        android:text="@string/valorDividido"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewValorTotal"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listaItens"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonFecharConta"
        android:layout_width="387dp"
        android:layout_height="58dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="-10dp"
        android:onClick="fechaConta"
        android:text="@string/textoFecharConta"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewValorTotal" />

</android.support.constraint.ConstraintLayout>
